[gd_scene load_steps=2 format=2]

[ext_resource path="res://src/UI/HUD.gd" type="Script" id=1]

[node name="HUD" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="ScoreLabel" type="Label" parent="."]
anchor_left = 0.49828
anchor_top = 0.5
anchor_right = 0.49828
anchor_bottom = 0.5
margin_left = -90.5823
margin_top = 145.14
margin_right = -39.5823
margin_bottom = 159.14
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Score: 0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="InstructionLabel" type="Label" parent="."]
margin_left = 361.397
margin_top = 420.001
margin_right = 517.397
margin_bottom = 434.001
rect_rotation = -0.794603
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Attack the alien to score"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="InventoryLabel" type="Label" parent="."]
anchor_left = -0.00119683
anchor_right = -0.00119683
margin_left = 362.089
margin_top = 382.0
margin_right = 529.089
margin_bottom = 399.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "3 Projectiles Remaining"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StrengthBar" type="ProgressBar" parent="."]
margin_left = 2.0
margin_top = 513.0
margin_right = 251.0
margin_bottom = 536.0
rect_rotation = -89.6456
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ReturnButton" type="Button" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -159.219
margin_top = 77.3307
margin_right = 99.781
margin_bottom = 107.331
text = "RETURN TO TITLE"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="ReturnButton" to="." method="_on_ReturnButton_pressed"]
